🩹 Fix word wrap in app page titles

--- a/assets/css/apps.css
+++ b/assets/css/apps.css
@@ -1,6 +1,8 @@
 .app-details-content {
   & h3 {
     @apply text-6xl font-bold mb-8 capitalize;
+    overflow-wrap: break-word;
+    hyphens: auto;
   }
   & h3:not(:first-of-type) {
     @apply mt-16 md:mt-36;
